add css style for pandoc filter for equation

--- a/manuscript/conf/template.html
+++ b/manuscript/conf/template.html
@@ -234,6 +234,9 @@
          right: 40px;
          z-index: 99;
          }
+         .eqnos { display: inline-block; position: relative; width: 100%; }
+         .eqnos br { display: none; }
+         .eqnos-number { position: absolute; right: 0em; top: 50%; line-height: 0; }
       </style>
    </head>
    <body>
