--- a/manuscript/conf/templateSupp.html
+++ b/manuscript/conf/templateSupp.html
@@ -221,7 +221,7 @@
       </header>
 
       <nav class="artifacts">
-         <a href="https://github.com/$github-repo$" title="Github repo" target="_blank"><img src="https://img.shields.io/badge/write-github-blue.svg" /></a>
+         <a href="https://github.com/$github-user$/$github-repo$" title="Github repo" target="_blank"><img src="https://img.shields.io/badge/write-github-blue.svg" /></a>
          <a href="manuscript.pdf" title="Github repo" target="_blank"><img src="https://img.shields.io/badge/read-pdf-green.svg" /></a>
          <a href="manuscript.docx" title="Github repo" target="_blank"><img src="https://img.shields.io/badge/read-docx-yellow.svg" /></a>
          $if(zenodoDOI)$
